src/generated/entdlrParser.cpp

// Generated from entdlr.g4 by ANTLR 4.7.2


#include "entdlrListener.h"

#include "entdlrParser.h"


using namespace antlrcpp;
using namespace antlr4;

entdlrParser::entdlrParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

entdlrParser::~entdlrParser() {
  delete _interpreter;
}

std::string entdlrParser::getGrammarFileName() const {
  return "entdlr.g4";
}

const std::vector<std::string>& entdlrParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& entdlrParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProtoContext ------------------------------------------------------------------

entdlrParser::ProtoContext::ProtoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

entdlrParser::SyntaxContext* entdlrParser::ProtoContext::syntax() {
  return getRuleContext<entdlrParser::SyntaxContext>(0);
}

tree::TerminalNode* entdlrParser::ProtoContext::EOF() {
  return getToken(entdlrParser::EOF, 0);
}

std::vector<entdlrParser::ImportStatementContext *> entdlrParser::ProtoContext::importStatement() {
  return getRuleContexts<entdlrParser::ImportStatementContext>();
}

entdlrParser::ImportStatementContext* entdlrParser::ProtoContext::importStatement(size_t i) {
  return getRuleContext<entdlrParser::ImportStatementContext>(i);
}

std::vector<entdlrParser::PackageStatementContext *> entdlrParser::ProtoContext::packageStatement() {
  return getRuleContexts<entdlrParser::PackageStatementContext>();
}

entdlrParser::PackageStatementContext* entdlrParser::ProtoContext::packageStatement(size_t i) {
  return getRuleContext<entdlrParser::PackageStatementContext>(i);
}

std::vector<entdlrParser::OptionContext *> entdlrParser::ProtoContext::option() {
  return getRuleContexts<entdlrParser::OptionContext>();
}

entdlrParser::OptionContext* entdlrParser::ProtoContext::option(size_t i) {
  return getRuleContext<entdlrParser::OptionContext>(i);
}

std::vector<entdlrParser::TopLevelDefContext *> entdlrParser::ProtoContext::topLevelDef() {
  return getRuleContexts<entdlrParser::TopLevelDefContext>();
}

entdlrParser::TopLevelDefContext* entdlrParser::ProtoContext::topLevelDef(size_t i) {
  return getRuleContext<entdlrParser::TopLevelDefContext>(i);
}

std::vector<entdlrParser::EmptyStatementContext *> entdlrParser::ProtoContext::emptyStatement() {
  return getRuleContexts<entdlrParser::EmptyStatementContext>();
}

entdlrParser::EmptyStatementContext* entdlrParser::ProtoContext::emptyStatement(size_t i) {
  return getRuleContext<entdlrParser::EmptyStatementContext>(i);
}


size_t entdlrParser::ProtoContext::getRuleIndex() const {
  return entdlrParser::RuleProto;
}

void entdlrParser::ProtoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProto(this);
}

void entdlrParser::ProtoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProto(this);
}

entdlrParser::ProtoContext* entdlrParser::proto() {
  ProtoContext *_localctx = _tracker.createInstance<ProtoContext>(_ctx, getState());
  enterRule(_localctx, 0, entdlrParser::RuleProto);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    syntax();
    setState(96);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << entdlrParser::ENUM)
      | (1ULL << entdlrParser::IMPORT)
      | (1ULL << entdlrParser::MESSAGE)
      | (1ULL << entdlrParser::OPTION)
      | (1ULL << entdlrParser::PACKAGE)
      | (1ULL << entdlrParser::SERVICE)
      | (1ULL << entdlrParser::SEMI))) != 0)) {
      setState(94);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case entdlrParser::IMPORT: {
          setState(89);
          importStatement();
          break;
        }

        case entdlrParser::PACKAGE: {
          setState(90);
          packageStatement();
          break;
        }

        case entdlrParser::OPTION: {
          setState(91);
          option();
          break;
        }

        case entdlrParser::ENUM:
        case entdlrParser::MESSAGE:
        case entdlrParser::SERVICE: {
          setState(92);
          topLevelDef();
          break;
        }

        case entdlrParser::SEMI: {
          setState(93);
          emptyStatement();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(99);
    match(entdlrParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SyntaxContext ------------------------------------------------------------------

entdlrParser::SyntaxContext::SyntaxContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* entdlrParser::SyntaxContext::SYNTAX() {
  return getToken(entdlrParser::SYNTAX, 0);
}

tree::TerminalNode* entdlrParser::SyntaxContext::ASSIGN() {
  return getToken(entdlrParser::ASSIGN, 0);
}

tree::TerminalNode* entdlrParser::SyntaxContext::SEMI() {
  return getToken(entdlrParser::SEMI, 0);
}

tree::TerminalNode* entdlrParser::SyntaxContext::PROTO3_DOUBLE() {
  return getToken(entdlrParser::PROTO3_DOUBLE, 0);
}

tree::TerminalNode* entdlrParser::SyntaxContext::PROTO3_SINGLE() {
  return getToken(entdlrParser::PROTO3_SINGLE, 0);
}


size_t entdlrParser::SyntaxContext::getRuleIndex() const {
  return entdlrParser::RuleSyntax;
}

void entdlrParser::SyntaxContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSyntax(this);
}

void entdlrParser::SyntaxContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSyntax(this);
}

entdlrParser::SyntaxContext* entdlrParser::syntax() {
  SyntaxContext *_localctx = _tracker.createInstance<SyntaxContext>(_ctx, getState());
  enterRule(_localctx, 2, entdlrParser::RuleSyntax);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(entdlrParser::SYNTAX);
    setState(102);
    match(entdlrParser::ASSIGN);
    setState(103);
    _la = _input->LA(1);
    if (!(_la == entdlrParser::PROTO3_DOUBLE

    || _la == entdlrParser::PROTO3_SINGLE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(104);
    match(entdlrParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStatementContext ------------------------------------------------------------------

entdlrParser::ImportStatementContext::ImportStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* entdlrParser::ImportStatementContext::IMPORT() {
  return getToken(entdlrParser::IMPORT, 0);
}

tree::TerminalNode* entdlrParser::ImportStatementContext::StrLit() {
  return getToken(entdlrParser::StrLit, 0);
}

tree::TerminalNode* entdlrParser::ImportStatementContext::SEMI() {
  return getToken(entdlrParser::SEMI, 0);
}

tree::TerminalNode* entdlrParser::ImportStatementContext::WEAK() {
  return getToken(entdlrParser::WEAK, 0);
}

tree::TerminalNode* entdlrParser::ImportStatementContext::PUBLIC() {
  return getToken(entdlrParser::PUBLIC, 0);
}


size_t entdlrParser::ImportStatementContext::getRuleIndex() const {
  return entdlrParser::RuleImportStatement;
}

void entdlrParser::ImportStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStatement(this);
}

void entdlrParser::ImportStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStatement(this);
}

entdlrParser::ImportStatementContext* entdlrParser::importStatement() {
  ImportStatementContext *_localctx = _tracker.createInstance<ImportStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, entdlrParser::RuleImportStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(entdlrParser::IMPORT);
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == entdlrParser::PUBLIC

    || _la == entdlrParser::WEAK) {
      setState(107);
      _la = _input->LA(1);
      if (!(_la == entdlrParser::PUBLIC

      || _la == entdlrParser::WEAK)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(110);
    match(entdlrParser::StrLit);
    setState(111);
    match(entdlrParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageStatementContext ------------------------------------------------------------------

entdlrParser::PackageStatementContext::PackageStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* entdlrParser::PackageStatementContext::PACKAGE() {
  return getToken(entdlrParser::PACKAGE, 0);
}

entdlrParser::FullIdentContext* entdlrParser::PackageStatementContext::fullIdent() {
  return getRuleContext<entdlrParser::FullIdentContext>(0);
}

tree::TerminalNode* entdlrParser::PackageStatementContext::SEMI() {
  return getToken(entdlrParser::SEMI, 0);
}


size_t entdlrParser::PackageStatementContext::getRuleIndex() const {
  return entdlrParser::RulePackageStatement;
}

void entdlrParser::PackageStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPackageStatement(this);
}

void entdlrParser::PackageStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPackageStatement(this);
}

entdlrParser::PackageStatementContext* entdlrParser::packageStatement() {
  PackageStatementContext *_localctx = _tracker.createInstance<PackageStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, entdlrParser::RulePackageStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(entdlrParser::PACKAGE);
    setState(114);
    fullIdent();
    setState(115);
    match(entdlrParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionContext ------------------------------------------------------------------

entdlrParser::OptionContext::OptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* entdlrParser::OptionContext::OPTION() {
  return getToken(entdlrParser::OPTION, 0);
}

entdlrParser::OptionNameContext* entdlrParser::OptionContext::optionName() {
  return getRuleContext<entdlrParser::OptionNameContext>(0);
}

tree::TerminalNode* entdlrParser::OptionContext::ASSIGN() {
  return getToken(entdlrParser::ASSIGN, 0);
}

tree::TerminalNode* entdlrParser::OptionContext::SEMI() {
  return getToken(entdlrParser::SEMI, 0);
}

entdlrParser::ConstantContext* entdlrParser::OptionContext::constant() {
  return getRuleContext<entdlrParser::ConstantContext>(0);
}

entdlrParser::OptionBodyContext* entdlrParser::OptionContext::optionBody() {
  return getRuleContext<entdlrParser::OptionBodyContext>(0);
}


size_t entdlrParser::OptionContext::getRuleIndex() const {
  return entdlrParser::RuleOption;
}

void entdlrParser::OptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOption(this);
}

void entdlrParser::OptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOption(this);
}

entdlrParser::OptionContext* entdlrParser::option() {
  OptionContext *_localctx = _tracker.createInstance<OptionContext>(_ctx, getState());
  enterRule(_localctx, 8, entdlrParser::RuleOption);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(entdlrParser::OPTION);
    setState(118);
    optionName();
    setState(119);
    match(entdlrParser::ASSIGN);
    setState(122);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case entdlrParser::Ident:
      case entdlrParser::IntLit:
      case entdlrParser::FloatLit:
      case entdlrParser::BoolLit:
      case entdlrParser::StrLit:
      case entdlrParser::MINUS:
      case entdlrParser::PLUS: {
        setState(120);
        constant();
        break;
      }

      case entdlrParser::LBRACE: {
        setState(121);
        optionBody();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(124);
    match(entdlrParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionNameContext ------------------------------------------------------------------

entdlrParser::OptionNameContext::OptionNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> entdlrParser::OptionNameContext::Ident() {
  return getTokens(entdlrParser::Ident);
}

tree::TerminalNode* entdlrParser::OptionNameContext::Ident(size_t i) {
  return getToken(entdlrParser::Ident, i);
}

tree::TerminalNode* entdlrParser::OptionNameContext::LPAREN() {
  return getToken(entdlrParser::LPAREN, 0);
}

entdlrParser::FullIdentContext* entdlrParser::OptionNameContext::fullIdent() {
  return getRuleContext<entdlrParser::FullIdentContext>(0);
}

tree::TerminalNode* entdlrParser::OptionNameContext::RPAREN() {
  return getToken(entdlrParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> entdlrParser::OptionNameContext::DOT() {
  return getTokens(entdlrParser::DOT);
}

tree::TerminalNode* entdlrParser::OptionNameContext::DOT(size_t i) {
  return getToken(entdlrParser::DOT, i);
}

std::vector<entdlrParser::ReservedWordContext *> entdlrParser::OptionNameContext::reservedWord() {
  return getRuleContexts<entdlrParser::ReservedWordContext>();
}

entdlrParser::ReservedWordContext* entdlrParser::OptionNameContext::reservedWord(size_t i) {
  return getRuleContext<entdlrParser::ReservedWordContext>(i);
}


size_t entdlrParser::OptionNameContext::getRuleIndex() const {
  return entdlrParser::RuleOptionName;
}

void entdlrParser::OptionNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionName(this);
}

void entdlrParser::OptionNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionName(this);
}

entdlrParser::OptionNameContext* entdlrParser::optionName() {
  OptionNameContext *_localctx = _tracker.createInstance<OptionNameContext>(_ctx, getState());
  enterRule(_localctx, 10, entdlrParser::RuleOptionName);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case entdlrParser::Ident: {
        setState(126);
        match(entdlrParser::Ident);
        break;
      }

      case entdlrParser::LPAREN: {
        setState(127);
        match(entdlrParser::LPAREN);
        setState(128);
        fullIdent();
        setState(129);
        match(entdlrParser::RPAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(140);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == entdlrParser::DOT) {
      setState(133);
      match(entdlrParser::DOT);
      setState(136);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case entdlrParser::Ident: {
          setState(134);
          match(entdlrParser::Ident);
          break;
        }

        case entdlrParser::MESSAGE:
        case entdlrParser::OPTION:
        case entdlrParser::PACKAGE:
        case entdlrParser::RPC:
        case entdlrParser::SERVICE:
        case entdlrParser::STREAM:
        case entdlrParser::STRING:
        case entdlrParser::SYNTAX:
        case entdlrParser::WEAK: {
          setState(135);
          reservedWord();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(142);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionBodyContext ------------------------------------------------------------------

entdlrParser::OptionBodyContext::OptionBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* entdlrParser::OptionBodyContext::LBRACE() {
  return getToken(entdlrParser::LBRACE, 0);
}

tree::TerminalNode* entdlrParser::OptionBodyContext::RBRACE() {
  return getToken(entdlrParser::RBRACE, 0);
}

std::vector<entdlrParser::OptionBodyVariableContext *> entdlrParser::OptionBodyContext::optionBodyVariable() {
  return getRuleContexts<entdlrParser::OptionBodyVariableContext>();
}

entdlrParser::OptionBodyVariableContext* entdlrParser::OptionBodyContext::optionBodyVariable(size_t i) {
  return getRuleContext<entdlrParser::OptionBodyVariableContext>(i);
}


size_t entdlrParser::OptionBodyContext::getRuleIndex() const {
  return entdlrParser::RuleOptionBody;
}

void entdlrParser::OptionBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionBody(this);
}

void entdlrParser::OptionBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionBody(this);
}

entdlrParser::OptionBodyContext* entdlrParser::optionBody() {
  OptionBodyContext *_localctx = _tracker.createInstance<OptionBodyContext>(_ctx, getState());
  enterRule(_localctx, 12, entdlrParser::RuleOptionBody);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    match(entdlrParser::LBRACE);
    setState(147);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == entdlrParser::Ident

    || _la == entdlrParser::LPAREN) {
      setState(144);
      optionBodyVariable();
      setState(149);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(150);
    match(entdlrParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionBodyVariableContext ------------------------------------------------------------------

entdlrParser::OptionBodyVariableContext::OptionBodyVariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

entdlrParser::OptionNameContext* entdlrParser::OptionBodyVariableContext::optionName() {
  return getRuleContext<entdlrParser::OptionNameContext>(0);
}

entdlrParser::ConstantContext* entdlrParser::OptionBodyVariableContext::constant() {
  return getRuleContext<entdlrParser::ConstantContext>(0);
}


size_t entdlrParser::OptionBodyVariableContext::getRuleIndex() const {
  return entdlrParser::RuleOptionBodyVariable;
}

void entdlrParser::OptionBodyVariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionBodyVariable(this);
}

void entdlrParser::OptionBodyVariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionBodyVariable(this);
}

entdlrParser::OptionBodyVariableContext* entdlrParser::optionBodyVariable() {
  OptionBodyVariableContext *_localctx = _tracker.createInstance<OptionBodyVariableContext>(_ctx, getState());
  enterRule(_localctx, 14, entdlrParser::RuleOptionBodyVariable);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    optionName();
    setState(153);
    match(entdlrParser::T__0);
    setState(154);
    constant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelDefContext ------------------------------------------------------------------

entdlrParser::TopLevelDefContext::TopLevelDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

entdlrParser::MessageContext* entdlrParser::TopLevelDefContext::message() {
  return getRuleContext<entdlrParser::MessageContext>(0);
}

entdlrParser::EnumDefinitionContext* entdlrParser::TopLevelDefContext::enumDefinition() {
  return getRuleContext<entdlrParser::EnumDefinitionContext>(0);
}

entdlrParser::ServiceContext* entdlrParser::TopLevelDefContext::service() {
  return getRuleContext<entdlrParser::ServiceContext>(0);
}


size_t entdlrParser::TopLevelDefContext::getRuleIndex() const {
  return entdlrParser::RuleTopLevelDef;
}

void entdlrParser::TopLevelDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelDef(this);
}

void entdlrParser::TopLevelDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<entdlrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelDef(this);
}

entdlrParser::TopLevelDefContext* entdlrParser::topLevelDef() {
  TopLevelDefContext *_localctx = _tracker.createInstance<TopLevelDefContext>(_ctx, getState());
  enterRule(_localctx, 16, entdlrParser::RuleTopLevelDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(159);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case entdlrParser::MESSAGE: {
        enterOuterAlt(_localctx, 1);
        setState(156);
        message();
        break;
      }

      case entdlrParser::ENUM: {
        enterOuterAlt(_localctx, 2);
        setState(157);
        enumDefinition();
        break;
      }

      case entdlrParser::SERVICE: {
        enterOuterAlt(_localctx, 3);
        setState(158);
        service();
        break;
      }
